Ensure that spinner covers the modal

--- a/src/ClientApp/src/components/sections/Appointments/AppointmentsSection.css
+++ b/src/ClientApp/src/components/sections/Appointments/AppointmentsSection.css
@@ -1,4 +1,5 @@
-.fixed-spinner-bg {
+.fixed-spinner-wrapper {
+    z-index: 2000;
     position: fixed;
     top: 0;
     left: 0;
